# Python-SimConnect

./: .gitignore  ESP32_Client_[WIP].py  Makefile  Pipfile  PythonSimConnect.py  README.md  esp32_boot_test.py  example.py  flask_dummy_server.py  flask_server.py  flask_server_Test.py  flask_server_[WIP].py  format_tools.py  glass_dummy_server.py  glass_server.py  local_example.py  local_example_plane_async.py  local_example_plane_sync.py  local_example_set_sim_var_data.py  local_tester.py  reporter.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py
.github/workflows/: test-and-build.yml
SimConnect/: AsyncLoop.py  AsyncSimConnect.py  Attributes.py  Constants.py  Enum.py  EventList.py  Events.py  FacilitiesList.py  Measurements.py  RequestList.py  ScenarioFunctions.py  SimConnect.py  SimConnection.py  __init__.py
SimConnect/Entities/: Entity.py  Plane.py  __init__.py
static/css/: attind_style.css
static/js/: attind_script.js
static/js/custom/: getSimData.js
templates/: ajaxtest.html  ajaxtest2.html  ajaxtest3.html  glass.html  glass2.html  glass3.html  glass_old.html  go_example.html  toggletest.html
templates/attitude-indicator/: CNAME  README.md  index.html
tests/: Mockup_SimConnectDLL.py  test.py  test_entity_plane.py  test_first.py  test_request.py  test_scenario_functions.py  test_simconnect.py
